[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Towers/tower2.png" type="Texture" id=1]
[ext_resource path="res://basicTower.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 65.3051

[node name="Basic" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 16.3516, 16.0543 )
texture = ExtResource( 1 )

[node name="Range" type="Area2D" parent="."]
position = Vector2( 16.0543, 14.7164 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 1 )

[node name="AttackSpeed" type="Timer" parent="."]
wait_time = 0.45
autostart = true

[node name="Gun" type="Node2D" parent="."]
scale = Vector2( 0.07, 0.07 )

[connection signal="area_entered" from="Range" to="." method="_on_Range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_Range_area_exited"]
[connection signal="timeout" from="AttackSpeed" to="." method="_on_AttackSpeed_timeout"]
